SERVICE_MESH/CONFIGS/FEDERATION/ratings-mtls-strict-pa.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ratings-mtls
  namespace: bookinfo-lab-ossm-apim
spec:
  selector:
    matchLabels:
      app: ratings
  mtls:
    mode: STRICT
